--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.nikola_brodar.pokemonapi.ui.activities.PokemonNewFlowHiltActivity" />
-        <activity android:name="com.nikola_brodar.pokemonapi.ui.activities.PokemonMovesNewFlowHiltActivity" />
+        <activity android:name="com.nikola_brodar.pokemonapi.ui.activities.PokemonActivity" />
+        <activity android:name="com.nikola_brodar.pokemonapi.ui.activities.PokemonMovesActivity" />
 
     </application>
 
