--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,9 @@ buildscript {
         kotlinVersion = '1.4.0'
         ktlintVersion = '0.38.1'
         ktxVersion = '1.0.2'
-        lifecycleVersion = '2.4.0-alpha01'
+        lifecycleVersion = '2.4.0'
         materialVersion = '1.2.0'
-        navigationVersion = '2.2.0'
+        navigationVersion = '2.3.5'
         okhttpLoggingVersion = OKHTTPCLIENT_VERSION //'4.7.2'
         recyclerViewVersion = '1.2.0-alpha05'
         retrofitVersion = RETROFIT_VERSION //'2.9.0'
@@ -38,8 +38,8 @@ buildscript {
         daggerVersion = DAGGER2_VERSION
         assistedInjectVersion = '0.5.2'
 
-        hiltVersion = '2.35.1'
-        hiltViewModelVersion = '1.0.0-alpha02'
+        hiltVersion = '2.36'
+        hiltViewModelVersion =  '1.0.0-alpha02'
     }
 
 
@@ -48,7 +48,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
+        classpath 'com.android.tools.build:gradle:7.0.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
