Add correct version for lifecycle-runtime and lifecycle-viewmodel libraries

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,8 @@ buildscript {
         kotlinVersion = '1.4.0'
         ktlintVersion = '0.38.1'
         ktxVersion = '1.0.2'
-        lifecycleVersion = '2.4.0-alpha03'
+        viewModelVersion = '2.2.0'
+        lifecycleVersion = '2.4.1'
         materialVersion = '1.2.0'
         navigationVersion = '2.2.0'
         okhttpLoggingVersion = OKHTTPCLIENT_VERSION //'4.7.2'
